--- a/heartbeat/index.html
+++ b/heartbeat/index.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>爱心跳动,3D拖拽搬</title>
+  <title>HeartBeat</title>
   <link rel="stylesheet" href="./css/style.css">
 
 </head>
